cambio de una linea de texto

--- a/Curriculum.html
+++ b/Curriculum.html
@@ -186,7 +186,7 @@
                         <p class="text-muted">Most Wanted Jeans | Ene 2024 - Jul 2024</p>
                         <ul>
                             <li>Desarrollo de herramientas administrativas en Excel avanzado para la gestión de inventarios y control de información empresarial</li>
-                            <li>Automatizar este sistema mediante la aplicación herramientas del software Microsoft Office Excel, SQL y Python</li>
+                            <li>Automatizar este sistema mediante la aplicación programacion VBA, SQL y Python</li>
                             <li>Supervisión de datos relacionados con maquinaria e insumos, optimizando procesos logísticos</li>
                             <li>Organización de reportes administrativos y cálculos de comisiones para más de 100 empleados</li>
                             <li>Diseñar un sistema automatizado de generación de reportes en PDF para nómina semanal de empleados</li>
