--- a/Curriculum.html
+++ b/Curriculum.html
@@ -109,7 +109,7 @@
         <div class="mt-3">
             <a href="mailto:ingspararia@gmail.com" class="text-white mx-2"><i class="fas fa-envelope"></i></a>
             <a href="tel:+573194275450" class="text-white mx-2"><i class="fas fa-phone"></i></a>
-            <a href="https://github.com/tu-usuario" class="text-white mx-2"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/IngSpararia2" class="text-white mx-2"><i class="fab fa-github"></i></a>
             <a href="https://mostwantedapp.onrender.com" class="text-white mx-2"><i class="fas fa-globe"></i></a>
         </div>
     </header>
